# fast-api-lms

./: main.py  pyproject.toml
alembic/: script.py.mako
alembic/versions/: 98e8883d7108_.py
api/: auth.py  song.py  users.py
api/utils/: users.py
db/: db_setup.py
db/models/: user.py
schemas/: user.py
