[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["SolonKarandanis <39560794+SolonKarandanis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
